Big update to syllabus and adding lab 1
I've added all you need for lab 1.

Also, I updated the syllabus with the latest reading and change the
grading. So check that out

--- a/syllabuspages/policies.html
+++ b/syllabuspages/policies.html
@@ -43,13 +43,10 @@
         deploy a Web site with multiple pages and cross-linked structures.
       </p>
       <p>
-        <b>Extended Description</b>: The course emphasizes a research-driven approach to web
-        development that adheres to the relevant standards specifications governing the use of the
-        web’s languages and protocols. All practices covered in this class give priority to
-        accessibility and long-term use and sustainability. The course avoids entirely the lore and
-        half-baked, quick-fix shortcuts that too often plague web development practice and
-        instruction. Student work is organized around several major projects, completed both
-        individually and in teams. All projects emphasize the course’s hands-on, theory-grounded
+        <b>Extended Description</b>: The course emphasizes standards and research. You will learn to
+				make websites that last and are accessibe to everyone. The course avoids quick-fix shortcuts that
+				too often plague web development practice and online instruction. Student work is organized around
+				several major projects. All projects emphasize the course’s hands-on, theory-grounded
         approach to web development.
       </p>
       <h3>Course Outcomes</h3>
@@ -57,64 +54,46 @@
         Students completing this course will learn to:
       </p>
       <ul>
-        <li>
-          Recognize HTML, CSS, and JavaScript markup and code in a web page/application
-        </li>
-        <li>
-          Select the proper mark-up tags or code to achieve a particular result
-        </li>
-        <li>
-          Identify improperly used markup and code
-        </li>
-        <li>Produce modern standards compliant web pages</li>
-        <li>Deploy web pages to a public server</li>
-        <li>
-          Thoughtfully evaluate and adopt only the most standards-compliant documentation,
-          libraries, and development techniques
-        </li>
+        <li>Recognize HTML, CSS, and JavaScript markup and code.</li>
+        <li>Select the proper mark-up tags or code to achieve a particular result.</li>
+        <li>Identify improperly used markup and code.</li>
+        <li>Produce modern standards compliant web pages.</li>
+        <li>Deploy web pages to a Gethub server.</li>
         <li>
           Write valid, well-formed semantic HTML; error-free, backward- and forward-compatible CSS;
           and error-free, progressively enhanced JavaScript over HTML pages that continue to
-          function in the absence of JavaScript
+          function in the absence of JavaScript.
         </li>
-        <li>
-          Effectively comment on and format source code for maximum readability
-        </li>
-        <li>
-          Track the development of a project over time and collaborate with others using version
-          control
-        </li>
+        <li>Effectively comment on and format source code for maximum readability.</li>
+        <li>Track the development of a project over time and collaborate with others using version control.</li>
       </ul>
       <h3>Course Objectives</h3>
-      <p>
-        At the conclusion of this course, successful students will be able to:
-      </p>
+      <p>At the conclusion of this course, successful students will be able to:</p>
       <ul>
         <li>
           Explain the client and server architecture of the internet and related web
-          technologies
+          technologies.
         </li>
         <li>
           Use a basic text editor and other software tools to create web pages using HTML, CSS,
-          JavaScript, jQuery, and images
+          JavaScript, jQuery, and Foundation.
         </li>
         <li>
-          Deploy web pages to a Linux-based web server using sftp and more leading-edge methods,
-          such as automated deploys integrated with version control
+          Deploy web pages to a Gethub using version control.
         </li>
         <li>
           Understand the history and track the ongoing development of web standard specifications
-          from the W3C, ISO, IETF, and other specifications-issuing groups
+          from the W3C, ISO, IETF, and other specifications-issuing groups.
         </li>
         <li>
           Research and argue for particular methods of web development that keep structure in HTML,
-          design entirely in CSS, and progressively enhanced behavior in JavaScript
+          design entirely in CSS, and progressively enhanced behavior in JavaScript.
         </li>
         <li>
-          Engage in agile, iterative web development, supported by version control
+          Engage in agile, iterative web development, supported by version control.
         </li>
         <li>
-          Write useful, descriptive messages attached to granular commits in a version control
+          Write useful, descriptive messages attached to granular commits in a version control.
           system
         </li>
       </ul>
@@ -124,12 +103,9 @@
       <section id="books">
         <h4>Required Books</h4>
         <p>
-          My policy for assigning books: they are all required in the edition indicated; the total
-          retail pricetag for the entire course should be less than $100 (this one is $84 on the
-          high end, assuming you opt for the electronic editions); and each book should be worthy
-          of a place on your bookshelf or electronic device of choice long after the class has
-          ended. My aim is to help you build your professional library, while also being sensitive
-          to your bank account.
+          The follwing books are required for this course. Retail price tag for the entire course
+					should be less than $100 and each book should be worthy of a place on your bookshelf or
+					electronic device of choice long after the class has ended.
         </p>
         <ul>
           <li>
@@ -156,10 +132,8 @@
       <section id="technologies">
         <h4>Required Materials and Technologies</h4>
         <ul>
-          <li>A blank, bound paper sketchbook of 100 pages or more</li>
           <li>An email account that you check regularly</li>
-          <li>A <a href="https://www.dropbox.com/">Dropbox</a> account</li>
-          <li>A browser- or cloud-based bookmarking scheme to aid your information management</li>
+          <li>A browser or cloud-based bookmarking scheme to aid your information management</li>
           <li>
             A Basecamp account (invite will arrive via email); Basecamp, not Blackboard, will be
             where we coordinate our work and communication in- and outside of class.
@@ -172,14 +146,13 @@
             A personal computer with the following software installed:
             <ul>
               <li>
-                A plain-text editor capable of syntax highlighting: Notepad++ (Windows), TextWrangler (mac), and Sublime Text 2 (multi-platform).
+                A plain-text editor capable of syntax highlighting. Recommended: Notepad++ (Windows),
+								TextWrangler (mac), or Sublime Text 2 (multi-platform).
               </li>
-              <li>Git (free)</li>
-              <li>Node.js (free)</li>
+              <li>Git or GitHub Desktop</li>
+              <li>Node.js</li>
               <li>Image-editing software (such as the free and open-source GIMP)</li>
-              <li>
-                As many different browsers as your operating system supports (e.g., Chrome, Opera,
-                Firefox, all free)
+              <li>At least three different browsers (e.g., Chrome, Opera, Firefox, or Edge)
               </li>
             </ul>
           </li>
@@ -188,47 +161,59 @@
     </section>
     <section id="grading">
       <h3>Grading Policy</h3>
-      <ul>
-        <li>Project 1 = 15pts</li>
-        <li>Project 2 = 20pts</li>
-        <li>Project 3 = 20pts</li>
-        <li>Production Problems = 20pts</li>
-        <li>Participation = 25pts</li>
-        <li>TOTAL = 100pts</li>
-      </ul>
-      <p>A = 90+ pts; B = 80-89pts; C = 70-79pts; D = 60-69pts; E =&lt; 59 pts</p>
+      <table>
+				<tr>
+					<td>Project 1</td>
+					<td>20 points</td>
+				</tr>
+				<tr>
+					<td>Project 2</td>
+					<td>20 points</td>
+				</tr>
+				<tr>
+					<td>Project 3</td>
+					<td>20 points</td>
+				</tr>
+				<tr>
+					<td>Labs</td>
+					<td>25 points</td>
+				</tr>
+				<tr>
+					<td>Commit Comments</td>
+					<td>15 points</td>
+				</tr>
+				<tr>
+					<td>Total</td>
+					<td>100 points</td>
+				</tr>
+			</table>
+      <p>A = 90+; B = 80-89; C = 70-79; D = 60-69; E =&lt; 59 points</p>
     </section>
     <section id="assignments">
       <h3>Assignment Submission</h3>
       <p>
-        All major projects for this course will be submitted via blackboard.
-        Submissions should <b>not</b> include attachments, but rather URLs pointing to your
-        project’s Git repository or, for certain assignments as indicated, Dropbox Share URLs or Google Doc Shared Links.
+        All major projects for this course will be submitted via Basecamp.
+        Submissions should <b>not</b> include attachments, but rather URLs
+				pointing to your project’s GitHub repository and live link.
         Examples will be demonstrated in class.
       </p>
       <p>
-        <b>All HTML in project and Production Problem submissions must pass validation</b> with the
+        <b>All HTML in project and lab submissions must pass validation</b> with the
         <a href="https://validator.w3.org/">W3C HTML validator</a>. Any work whose HTML does not
-        validate will receive a zero-point, failing grade. In the unlikely event that you discover
-        a validation error or warning that is a genuine bug in the validator, you must acknowledge
-        that bug in the email that accompanies your project, and point to the relevant
-        documentation, such as specifications or an existing reputable bug report, that your source
-        is in fact correct. Get in the habit early of validating your HTML each time before you
-        commit your work to Git.
+        validate will receive a zero-point, failing grade. Get in the habit early of validating 
+				your HTML each time before you commit your work to GitHub.
       </p>
       <h3>Late Work</h3>
       <p>
         I do not accept late work. All work must be submitted before the date and time specified
-        in each project description. Weekly work is due before the start of the first class
-        meeting each week.
+        in each project description.
       </p>
       <h3>Participation</h3>
       <p>
-        Your active participation in class and in online discussions and chats is required both
-        for your own success in the class, and for the success of the class as a whole. I do not
-        give reading quizzes, but I assign a lot of reading. And I expect you to be prepared
-        to discuss that reading, especially on Basecamp.
-      </p>
+        Your participation grade is a sum of your online activity. I will check to see that you are adding
+				proper summaries of your GitHub commits. You are also expected to help other students on Basecamp. 
+				This means polite give-and-take discussions of code. Do not discuse anything else. Practice professional 
+				and supportive critiquing. 
     </section>
     <section id="technology-policy">
       <h3>Course Technology Policy</h3>
