--- a/index.html
+++ b/index.html
@@ -35,28 +35,26 @@
     <ol class="calendar-weeks">
       <li class="week">
         <article id="Class-01">
-          <h3>Hello, HTML History <small>Week&nbsp;One</small></h3>
+          <h3>Tuesday, May 23 <small>First&nbsp;Class: <a href="">Video (comming soon)</a></small></h3>
           <section class="agenda">
             <ol>
               <li class="meeting">
-                <h4>Tuesday, May 23<a href="">Video</a></h4>
                 <ol>
                   <li>Syllabus &amp; introductions</li>
                   <li>A walk through HTML history</li>
                   <li>Major historical HTML specs: <a href="https://tools.ietf.org/html/rfc1866">HTML 2.0</a> (1995, RFC 1866); <a href="http://www.w3.org/TR/REC-html32">HTML 3.2</a> (1997); <a href="http://www.w3.org/TR/html401/">HTML 4.01</a> (1999); <a href="http://www.w3.org/TR/xhtml1/">XHTML 1.0</a> (2000/2002)</li>
-				  <li>Current HTML specs: <a href="http://www.w3.org/TR/html5/">HTML5</a> (2014); <a href="https://developers.whatwg.org">HTML: The Living Standard</a></li>
                   <li><a href="http://www.martinrinehart.com/frontend-engineering/engineers/html/html-tag-history.html">HTML Tags: Past, Present, Proposed</a></li>
-                </ol>
+									<li>HTTP Requests</li>
+								</ol>
               </li>
             </ol>
           </section>
           <section class="assigned">
-            <h3>Assigned Work</h3>
+            <h3>Assigned Reading</h3>
             <ul>
               <li>
-                <h4>To Read</h4>
                 <ol>
-                  <li>Course policies, calendar, and projects [Online students]</li>
+                  <li>Course policies, calendar, and projects</li>
                   <li><i>HTML5 for Web Designers, 2nd ed.</i>, Introduction; Chapters 1-2</li>
                   <li><i>Pragmatic Version Control Using Git</i>, Preface; Chapters 1-3 (Part I)</li>
                   <li>
@@ -70,10 +68,36 @@
           </section>
         </article>
       </li>
-
+      <li class="week">
+        <article id="Class-02">
+          <h3>Wednesday, May 24 <small>Second&nbsp;Class: <a href="">Video (comming soon)</small></a></h3>
+          <section class="agenda">
+            <ol>
+              <li class="meeting">
+                <ol>
+                  <li>How to set up GitHub &#x26; GitHub Desktop</li>
+									<li>Introduction to HTML, CSS, &#x26; JavaScript
+                  <li>Digging into HTML markup code</li>
+                </ol>
+              </li>
+            </ol>
+          </section>
+          <section class="assigned">
+            <h3>Assigned Reading</h3>
+            <ul>
+              <li>
+                <ol>
+									<li>Current HTML specs: <a href="http://www.w3.org/TR/html5/">HTML5</a> (2014); <a href="https://developers.whatwg.org">HTML: The Living Standard</a>; <a href="http://www.martinrinehart.com/frontend-engineering/engineers/html/html-tag-history.html">HTML Tags: Past, Present, Proposed</a></li>
+									<li>HTML semantics and global attributes</li>
+									<li><i>Pragmatic Version Control Using Git</i>, Chapters 4-9 (Part II)</li>
+                  <li><i>HTML5 for Web Designers, 2nd ed.</i>, Chapters 5-6</li>
+                </ol>
+              </li>
+            </ul>
           </section>
         </article>
       </li>
+
     </ol>
   </article>
 </main>
