Class video link on index
Adding link to class video

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" id="calendar">
 <head>
-<meta charset="utf-8" />
+  <meta charset="utf-8" />
   <title>ITMD 361: Fundamentals of Web Development</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
   <link rel="stylesheet" href="syllabuspages/screen.css" media="screen" />
@@ -35,7 +35,7 @@
     <ol class="calendar-weeks">
       <li class="week">
         <article id="Class-01">
-          <h3>Tuesday, May 23 <small>First&nbsp;Class: <a href="">Video (comming soon)</a></small></h3>
+          <h3>Tuesday, May 23 <small>First&nbsp;Class: <a href="https://media.iitonline.iit.edu/lectures/M17_ITMD-361-0_vJLhHxePbbkGqagZqzm34GGgjbqyyfJkKecS6W9M/index.html">Class Video</a></small></h3>
           <section class="agenda">
             <ol>
               <li class="meeting">
@@ -70,7 +70,7 @@
       </li>
       <li class="week">
         <article id="Class-02">
-          <h3>Wednesday, May 24 <small>Second&nbsp;Class: <a href="">Video (comming soon)</small></a></h3>
+          <h3>Wednesday, May 24 <small>Second&nbsp;Class: <a href="https://media.iitonline.iit.edu/lectures/M17_ITMD-361-0_vJLhHxePbbkGqagZqzm34GGgjbqyyfJkKecS6W9M/index.html">Class Video</small></a></h3>
           <section class="agenda">
             <ol>
               <li class="meeting">
