--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
       <a href="http://creativecommons.org/licenses/by/4.0/" rel="license">Creative Commons</a>.
       <a href="https://github.com/karlstolley/fwd">Source hosted on GitHub</a>. Big thanks to
       <a href="https://basecamp.com">Basecamp</a> and
-      <a href="https://www.browserstack.com">BrowserStack</a> for donating resources to further
+      <a href="https://www.addevent.com/">AddEvent</a> for donating resources to further
       the educational goals of this class.
     </p>
   </footer>
