--- a/syllabuspages/policies.html
+++ b/syllabuspages/policies.html
@@ -58,7 +58,7 @@
         <li>Select the proper mark-up tags or code to achieve a particular result.</li>
         <li>Identify improperly used markup and code.</li>
         <li>Produce modern standards compliant web pages.</li>
-        <li>Deploy web pages to a Gethub server.</li>
+        <li>Deploy web pages to a GitHub server.</li>
         <li>
           Write valid, well-formed semantic HTML; error-free, backward- and forward-compatible CSS;
           and error-free, progressively enhanced JavaScript over HTML pages that continue to
@@ -94,7 +94,6 @@
         </li>
         <li>
           Write useful, descriptive messages attached to granular commits in a version control.
-          system
         </li>
       </ul>
     </section>
