--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           </li>
           <li class="week">
             <article id="Class-03">
-              <h3>Tuesday, May 30 <small>Third&nbsp;Class: <a href="https://media.iitonline.iit.edu/lectures/M17_ITMD-361-0_vJLhHxePbbkGqagZqzm34GGgjbqyyfJkKecS6W9M/index.html">Class Video<a></small></h3>
+              <h3>Tuesday, May 30 <small>Third&nbsp;Class: <a href="https://media.iitonline.iit.edu/lectures/M17_ITMD-361-0_vJLhHxePbbkGqagZqzm34GGgjbqyyfJkKecS6W9M/index.html">Class Video</a></small></h3>
               <section class="agenda">
                 <ol>
                   <li class="meeting">
