--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
           </li>
           <li class="week">
             <article id="class-05">
-              <h3>Tuesday, June 06 <small>Fifth&nbsp;Class</h3><a href="https://media.iitonline.iit.edu/lectures/M17_ITMD-361-0_vJLhHxePbbkGqagZqzm34GGgjbqyyfJkKecS6W9M/index.html">Class Video</a></small></small></h3>
+              <h3>Tuesday, June 06 <small>Fifth&nbsp;Class: <a href="https://media.iitonline.iit.edu/lectures/M17_ITMD-361-0_vJLhHxePbbkGqagZqzm34GGgjbqyyfJkKecS6W9M/index.html">Class Video</a></small></small></h3>
               <section class="agenda">
                 <ol>
                   <li class="meeting">
@@ -186,7 +186,7 @@
           </li>
           <li class="week">
             <article id="class-06">
-              <h3>Wednesday, June 7 <small>Sixth&nbsp;Class</h3><a href="https://media.iitonline.iit.edu/lectures/M17_ITMD-361-0_vJLhHxePbbkGqagZqzm34GGgjbqyyfJkKecS6W9M/index.html">Class Video</a></small></small></h3>
+              <h3>Wednesday, June 7 <small>Sixth&nbsp;Class: <a href="https://media.iitonline.iit.edu/lectures/M17_ITMD-361-0_vJLhHxePbbkGqagZqzm34GGgjbqyyfJkKecS6W9M/index.html">Class Video</a></small></small></h3>
               <section class="agenda">
                 <ol>
                   <li class="meeting">
@@ -220,7 +220,7 @@
           </li>
           <li class="week">
             <article id="class-07">
-              <h3>Tuesday, June 13 <small>Seventh&nbsp;Class</h3><a href="https://media.iitonline.iit.edu/lectures/M17_ITMD-361-0_vJLhHxePbbkGqagZqzm34GGgjbqyyfJkKecS6W9M/index.html">Class Video</a></small></small></h3>
+              <h3>Tuesday, June 13 <small>Seventh&nbsp;Class: <a href="https://media.iitonline.iit.edu/lectures/M17_ITMD-361-0_vJLhHxePbbkGqagZqzm34GGgjbqyyfJkKecS6W9M/index.html">Class Video</a></small></small></h3>
               <section class="agenda">
                 <ol>
                   <li class="meeting">
@@ -253,7 +253,7 @@
           </li>
           <li class="week">
             <article id="class-08">
-              <h3>Wednesday, June 14 <small>Eigth&nbsp;Class</h3><a href="https://media.iitonline.iit.edu/lectures/M17_ITMD-361-0_vJLhHxePbbkGqagZqzm34GGgjbqyyfJkKecS6W9M/index.html">Class Video</a></small></small></h3>
+              <h3>Wednesday, June 14 <small>Eigth&nbsp;Class: <a href="https://media.iitonline.iit.edu/lectures/M17_ITMD-361-0_vJLhHxePbbkGqagZqzm34GGgjbqyyfJkKecS6W9M/index.html">Class Video</a></small></small></h3>
               <section class="agenda">
                 <ol>
                   <li class="meeting">
@@ -281,7 +281,7 @@
           </li>
           <li class="week">
             <article id="class-09">
-              <h3>Tuesday, June 20 <small>Ninth&nbsp;Class</h3><a href="https://media.iitonline.iit.edu/lectures/M17_ITMD-361-0_vJLhHxePbbkGqagZqzm34GGgjbqyyfJkKecS6W9M/index.html">Class Video</a></small></small></h3>
+              <h3>Tuesday, June 20 <small>Ninth&nbsp;Class: <a href="https://media.iitonline.iit.edu/lectures/M17_ITMD-361-0_vJLhHxePbbkGqagZqzm34GGgjbqyyfJkKecS6W9M/index.html">Class Video</a></small></small></h3>
               <section class="agenda">
                 <ol>
                   <li class="meeting">
@@ -302,7 +302,7 @@
           </li>
           <li class="week">
             <article id="class-10">
-              <h3>Wednesday, June 21 <small>Tenth&nbsp;Class</h3><a href="https://media.iitonline.iit.edu/lectures/M17_ITMD-361-0_vJLhHxePbbkGqagZqzm34GGgjbqyyfJkKecS6W9M/index.html">Class Video</a></small></small></h3>
+              <h3>Wednesday, June 21 <small>Tenth&nbsp;Class: <a href="https://media.iitonline.iit.edu/lectures/M17_ITMD-361-0_vJLhHxePbbkGqagZqzm34GGgjbqyyfJkKecS6W9M/index.html">Class Video</a></small></small></h3>
               <section class="agenda">
                 <ol>
                   <li class="meeting">
@@ -326,7 +326,7 @@
           </li>
           <li class="week">
             <article id="class-11">
-              <h3>Tuesday, June 27 <small>Eleventh&nbsp;Class</h3><a href="https://media.iitonline.iit.edu/lectures/M17_ITMD-361-0_vJLhHxePbbkGqagZqzm34GGgjbqyyfJkKecS6W9M/index.html">Class Video</a></small></small></h3>
+              <h3>Tuesday, June 27 <small>Eleventh&nbsp;Class: <a href="https://media.iitonline.iit.edu/lectures/M17_ITMD-361-0_vJLhHxePbbkGqagZqzm34GGgjbqyyfJkKecS6W9M/index.html">Class Video</a></small></small></h3>
               <section class="agenda">
                 <ol>
                   <li class="meeting">
@@ -350,7 +350,7 @@
           </li>
           <li class="week">
             <article id="class-12">
-              <h3>Wednesday, June 28 <small>Twelfth&nbsp;Class</h3><a href="https://media.iitonline.iit.edu/lectures/M17_ITMD-361-0_vJLhHxePbbkGqagZqzm34GGgjbqyyfJkKecS6W9M/index.html">Class Video</a></small></small></h3>
+              <h3>Wednesday, June 28 <small>Twelfth&nbsp;Class: <a href="https://media.iitonline.iit.edu/lectures/M17_ITMD-361-0_vJLhHxePbbkGqagZqzm34GGgjbqyyfJkKecS6W9M/index.html">Class Video</a></small></small></h3>
               <section class="agenda">
                 <ol>
                   <li class="meeting">
