--- a/syllabuspages/dates.html
+++ b/syllabuspages/dates.html
@@ -96,7 +96,7 @@
 		<table id="pptable">
 			<tr class="tablehead">
 				<td class="firstrow"></td>
-				<td class="tabletitle"><a href="https://github.com/dkriegls/itmd-361-spring2017/tree/master/Production-problems">Production Problems&#58;</a></td>
+				<td class="tabletitle"><a href="https://github.com/dkriegls/itmd-361-summer2017/tree/master/labs">Labs&#58;</a></td>
 			</tr>
 			<tr class="tablehead">
 				<td>Date</td>
