--- a/syllabuspages/projects.html
+++ b/syllabuspages/projects.html
@@ -211,7 +211,7 @@
             from class demos)
           </li>
           <li>
-            You must use of relative units (em, rem, vm, %) in your CSS to make your pages fluid. You may use px units to put a maximun size
+            You must use relative units (em, rem, vm, %) in your CSS to make your pages fluid. You may use px units to put a maximun size
 	    or within content areas. 
           </li>
 	  <li>
