--- a/demos/class12demo/js sliders/bxslider/bxDemo.html
+++ b/demos/class12demo/js sliders/bxslider/bxDemo.html
@@ -28,6 +28,7 @@
 			<li><img src="images/toystory.jpg" /></li>
 			<li><img src="images/up.jpg" /></li>
 			<li><img src="images/walle.jpg" /></li>
+     	<li><img src="images/controls.png" /></li>
 		</ul>
 	</div>
 	<script type="text/javascript">
