--- a/demos/class12demo/jquerydemo/jquery.html
+++ b/demos/class12demo/jquerydemo/jquery.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-	<script type="text/javascript" src="jquery-1.11.2.min.js"></script>
-	<script type="text/javascript">
+	<script src="jquery-1.11.2.min.js"></script>
+	<script>
 		$(document).ready(function(){
 
 			$('#btn1').click(function(evt){
